made some corrections

--- a/subindex.html
+++ b/subindex.html
@@ -23,8 +23,8 @@
 					<p>Please take a look around, see what I've been up to,<br />
 					and lets see what we can build together.</p>
 					<ul class="actions special">
-						<li><a href="hero.html" class="button scrolly">I NEED A SITE</a></li>
-						<li><a href="subHero.html" class="button scrolly">I NEED A DEV</a></li>
+						<li><a href="index.html" class="button scrolly">I NEED A SITE</a></li>
+						<li><a href="subindex.html" class="button scrolly">I NEED A DEV</a></li>
 						
 					</ul>
 				</div>
