--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Photon by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>AirSaycodes</title>
@@ -510,9 +506,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="https://twitter.com/aishaese" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://github.com/AirSayy" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://www.linkedin.com/in/eseoghene-a-eguakhide-995010120" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://twitter.com/aishaese" target="_blank" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://github.com/AirSayy"  target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/in/eseoghene-a-eguakhide-995010120" target="_blank" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; AirSay_</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
