--- a/subindex.html
+++ b/subindex.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Photon by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>AirSaycodes</title>
@@ -153,7 +148,7 @@
 							<header class="major">
 								<h2>I'm a Software Engineer based in, Nigeria</h2>
 							</header>
-							<p>When I'm not coding, I can be found browsing about the latest makeup trends and products and improving on my makeup game  and cooking new dishes. I'm a cook on diet(wink!). </p>
+							<p>Creative, detail-oriented, software engineer with a deep interest in AI and Innovations. Proven track record of creating and implementing successful front and back end web applications. <br>  <br> When I'm not coding, I can be found browsing about the latest makeup trends and products and improving on my makeup game  and cooking new dishes. I'm a cook on diet(wink!). </p>
 							<p>I push code frequently, feel free to connect with me on <a href="https://github.com/AirSayy"><strong> GitHub.</strong></a></p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
@@ -517,9 +512,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="https://twitter.com/aishaese" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://github.com/AirSayy" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://www.linkedin.com/in/eseoghene-a-eguakhide-995010120" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://twitter.com/aishaese" target="_blank" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://github.com/AirSayy" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/in/eseoghene-a-eguakhide-995010120" target="_blank" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; AirSay_</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
