updated my profile picture

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 							<p>Fun facts about me: I am enthusiastic about makeup and I love watching crime documentries. </p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/profile.jpg" alt="A picture of me"></span>
+							<span class="image fit"><img src="images/ese picture.jpeg" alt="A picture of me"></span>
 						</div>
 					</div>
 				</div>
