--- a/subindex.html
+++ b/subindex.html
@@ -152,7 +152,7 @@
 							<p>I push code frequently, feel free to connect with me on <a href="https://github.com/AirSayy"><strong> GitHub.</strong></a></p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/profile.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/ese picture.jpeg" alt="" /></span>
 						</div>
 					</div>
 				</div>
