updated my portfolio

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<head>
 		<title>AirSaycodes</title>
 		<meta charset="utf-8" />
+		<meta name="description" content="Portfolio">
+    	<meta name="keywords" content="portfolio,software-engineer, women-in-tech">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -86,11 +88,11 @@
 					<p>Here are a few of my latest projects, I invite you to explore them.</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<!--<h3>Spectral Salon</h3>
-							<p>A fully responsive, beautiful, and modern website for an on trend full-service salon.</p>-->
+							<span class="image fit"><img src="images/artist portfolio.png" alt="" /></span>
+							<h3>Artist Portfolio</h3>
+							<p>A fully responsive, beautiful, and modern website for a contempoary artist.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">View</a></li>
+								<li><a href="airsay.wixsite.com/tegasteven" target="_blank" class="button">View</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
