--- a/subindex.html
+++ b/subindex.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>AirSaycodes</title>
 		<meta charset="utf-8" />
+		<meta name="description" content="Portfolio">
+    	<meta name="keywords" content="portfolio,software-engineer, women-in-tech">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
