--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<!--<h3>Pastry Website</h3>
-							<p>Fun and color take charge for this local party entertainer's portfolio site.</p>-->
+							<span class="image fit"><img src="images/miya.png" alt="" /></span>
+							<h3>Beauty Salon Website</h3>
+							<p>Fully Responsive website for a Salon/Beauty parlour.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">View</a></li>
+								<li><a href="miyabeautysalon.netlify.app" class="button">View</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
