--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>AirSaycodes</title>
 		<meta charset="utf-8" />
 		<meta name="description" content="Portfolio">
-    	<meta name="keywords" content="portfolio,software-engineer, women-in-tech">
+    	<meta name="keywords" content="portfolio,Airsay,tech,stem,womenintech">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -92,7 +92,7 @@
 							<h3>Artist Portfolio</h3>
 							<p>A fully responsive, beautiful, and modern website for a contempoary artist.</p>
 							<ul class="actions special">
-								<li><a href="airsay.wixsite.com/tegasteven" target="_blank" class="button">View</a></li>
+								<li><a href="https://airsay.wixsite.com/tegasteven/" target="_blank" class="button">View</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
@@ -142,10 +142,10 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>I'm a Software Engineer based in, Nigeria</h2>
+								<h2>I'm a Software Engineer</h2>
 							</header>
 							<p>Solving problems and providing elegant, innovative and accessible solutions is a passion of mine.</p>
-							<p>Fun facts about me: I am enthusiastic about makeup and I love watching crime documentries. </p>
+							<p>Fun facts about me: I am enthusiastic about puzzles. </p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/ese picture.jpeg" alt="A picture of me"></span>
