--- a/subindex.html
+++ b/subindex.html
@@ -17,7 +17,7 @@
 					<span class="icon solid major fa-code"></span>
 					<h1>Hello!, I'm <strong>Eseoghene Eguakhide</strong>,<br> A Fullstack Software Engineer.
 					</h1>
-					<p>Please take a look around, see what I've been up to,<br />
+					<p>Please take a look around, see what I've been up to<br />
 					and lets see what we can build together.</p>
 					<ul class="actions special">
 						<li><a href="index.html" class="button scrolly">I NEED A SITE</a></li>
@@ -37,9 +37,9 @@
 							</header>
 							<p>Building and enhancing software to make everyone days better is what I do. 
 								Passion for learning, problem solving and improvement has always been part of me. 
-								In university, I studied Entrepreneurship and Business management,which enabled me to better better
-								at problem solving, customer satisfaction and efficiency 
-								 and software engineering gives me a little of both worlds by satisfying customer needs 
+								In university, I studied Entrepreneurship and Business management, which enabled me to better better
+								at problem solving, user satisfaction and efficiency 
+								 and software engineering gives me a little of both worlds by satisfying user needs 
 								 via web application. <br><br> While working across diverse industries 
 								 I was struck by how even small improvements in systems and processes universally
 								  made radical impacts on user happiness and satisfaction.
@@ -148,9 +148,9 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>I'm a Software Engineer based in, Nigeria</h2>
+								<h2>I'm a Software Engineer.</h2>
 							</header>
-							<p>Creative, detail-oriented, software engineer with a deep interest in AI and Innovations. Proven track record of creating and implementing successful front and back end web applications. <br>  <br> When I'm not coding, I can be found browsing about the latest makeup trends and products and improving on my makeup game  and cooking new dishes. I'm a cook on diet(wink!). </p>
+							<p>Creative, detail-oriented software engineer with a deep interest in AI and Innovations. Proven track record of creating and implementing successful front and back end web applications. <br>  <br> When I'm not coding, I can be found browsing about the latest makeup trends, food recipes and cooking new dishes. I'm a cook on diet(wink!). </p>
 							<p>I push code frequently, feel free to connect with me on <a href="https://github.com/AirSayy"><strong> GitHub.</strong></a></p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
