Updated my portfolio with a full stack project

--- a/subindex.html
+++ b/subindex.html
@@ -94,11 +94,11 @@
 					<p>Here are a few of my latest projects, I invite you to explore them.</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<!--<h3>Spectral Salon</h3>
-							<p>A fully responsive, beautiful, and modern website for an on trend full-service salon.</p>-->
+							<span class="image fit"><img src="https://media.giphy.com/media/N2wqoSb09E8ULQ2lDd/giphy.gif" alt="" /></span>
+							<h3>Whats In The Fridge!</h3>
+							<p>A fully responsive FullStack Web Application that allows users to fill in ingredients in their Fridge/Kitchen and it returns a list of Recipes filtered by Calories,Missing ingredient,Protein and Carbs.</p>-->
 							<ul class="actions special">
-								<li><a href="#" class="button">View</a></li>
+								<li><a href="https://whatisinthefridge.netlify.app/" class="button">View</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
