--- a/subindex.html
+++ b/subindex.html
@@ -96,19 +96,12 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="https://media.giphy.com/media/N2wqoSb09E8ULQ2lDd/giphy.gif" alt="" /></span>
 							<h3>Whats In The Fridge!</h3>
-							<p>A fully responsive FullStack Web Application that allows users to fill in ingredients in their Fridge/Kitchen and it returns a list of Recipes filtered by Calories,Missing ingredient,Protein and Carbs.</p>-->
+							<p>A fully responsive FullStack Web Application that allows users to fill in ingredients in their Fridge/Kitchen and it returns a list of Recipes filtered by Calories,Missing ingredient,Protein and Carbs.</p>
 							<ul class="actions special">
 								<li><a href="https://whatisinthefridge.netlify.app/" class="button">View</a></li>
 							</ul>
 						</div>
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<!--<h3>Pastry Website</h3>
-							<p>Fun and color take charge for this local party entertainer's portfolio site.</p>-->
-							<ul class="actions special">
-								<li><a href="#" class="button">View</a></li>
-							</ul>
-						</div>
+						
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<!--<h3>Stevens Art Gallery</h3>
@@ -121,28 +114,8 @@
 				</div>
 			</section>
 
-			<!-- four -->
-			<!--<section id="one" class="main style1">
-				<div class="container">
-					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
-							<header class="major">
-								<h2>Is your web presence working for you</h2>
-							</header>
-							<p>If someone needs what you provide, will your website draw them in? What will they see if they are on their phone? A responsive & accessible web presence is no longer merely a 'bonus' or 'nice to have' - it is essential.
 
-								It is my privilege to offer a chance to be seen on the web to small businesses and individuals around me. Whether that be creating a website for you from the ground up, or updating an existing presence for the mobile age. Providing a place for
-								 interested parties to find and learn about what you offer is what I offer. How can I help you today?</p>
-						</div>
-						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-						</div>
-					</div>
-				</div>
-			</section>-->
-
-
-		<!-- Five -->
+		<!-- Four -->
 			<section id="four" class="main style2 special">
 				<div class="container">
 					<div class="row gtr-150">
