--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 					Or send me a quick message here:</p>
 				</div>
 				<section>
-					<form method="POST" name="contact"><input type="hidden" name="form-name" value="contact">
+					<form method="POST" name="netlify"><input type="text" name="form-name" value="contact">
 						<div class="row gtr-uniform gtr-50">
 							<div class="col-6 col-12-xsmall">
 								<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name">
@@ -174,12 +174,12 @@
 								<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email">
 							</div>
 							<div class="col-12">
-								<textarea name="demo-message" id="demo-message" placeholder="Form submissions are disabled for the time being. If you need me, please reach out via email." rows="6"></textarea>
+								<textarea name="demo-message" id="demo-message" placeholder="Type in your message here." rows="6"></textarea>
 							</div>
 							<div class="col-12">
 								<ul class="actions">
-									<li><input disabled="" type="submit" value="Send Message" class="primary"></li>
-									<li><input disabled="" type="reset" value="Reset"></li>
+									<li><input type="submit" value="Send Message" class="primary"></li>
+									<li><input type="reset" value="Reset"></li>
 								</ul>
 							</div>
 						</div>
