--- a/index.html
+++ b/index.html
@@ -165,16 +165,16 @@
 					Or send me a quick message here:</p>
 				</div>
 				<section>
-					<form method="POST" name="netlify"><input type="text" name="form-name" value="contact">
+					<form name="netlify"><input type="text" name="name" value="contact">
 						<div class="row gtr-uniform gtr-50">
 							<div class="col-6 col-12-xsmall">
-								<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name">
+								<input type="text" name="name" id="name" value="" placeholder="Name">
 							</div>
 							<div class="col-6 col-12-xsmall">
-								<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email">
+								<input type="email" name="email" id="email" value="" placeholder="Email">
 							</div>
 							<div class="col-12">
-								<textarea name="demo-message" id="demo-message" placeholder="Type in your message here." rows="6"></textarea>
+								<textarea name="message" id="message" placeholder="Type in your message here." rows="6"></textarea>
 							</div>
 							<div class="col-12">
 								<ul class="actions">
