--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 					Or send me a quick message here:</p>
 				</div>
 				<section>
-					<form name="contact" method="POST" data-netlify="true"><input type="text" name="name" value="contact">
+					<form name="contact" method="POST" data-netlify="true">
 						<div class="row gtr-uniform gtr-50">
 							<div class="col-6 col-12-xsmall">
 								<input type="text" name="name" id="name" value="" placeholder="Name">
@@ -173,6 +173,7 @@
 							<div class="col-6 col-12-xsmall">
 								<input type="email" name="email" id="email" value="" placeholder="Email">
 							</div>
+							
 							<div class="col-12">
 								<textarea name="message" id="message" placeholder="Type in your message here." rows="6"></textarea>
 							</div>
