--- a/subindex.html
+++ b/subindex.html
@@ -144,7 +144,7 @@
 					Or send me a quick message here:</p>
 				</div>
 				<section>
-					<form method="POST" name="netlify"><input type="text" name="form-name" value="contact">
+					<form name="contact" method="POST" data-netlify="true"></form>
 						<div class="row gtr-uniform gtr-50">
 							<div class="col-6 col-12-xsmall">
 								<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name">
