--- a/subindex.html
+++ b/subindex.html
@@ -153,7 +153,7 @@
 								<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email">
 							</div>
 							<div class="col-12">
-								<textarea name="demo-message" id="demo-message" placeholder="Type in your message here." rows="6"></textarea>
+								<textarea name="message" id="message" placeholder="Type in your message here." rows="6"></textarea>
 							</div>
 							<div class="col-12">
 								<ul class="actions">
