--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 					Or send me a quick message here:</p>
 				</div>
 				<section>
-					<form name="portfolio-contact" method="POST" data-netlify="true"><input type="hidden" name="portfolio-contact" value="portfolio-contact" />
+					<form name="portfolio-contact" method="POST" data-netlify="true"><input type="hidden" name="portfolio-contact" value="portfolio-contact">
 						<div class="row gtr-uniform gtr-50">
 							<div class="col-6 col-12-xsmall">
 								<input type="text" name="name" id="name" value="" placeholder="Name">
