--- a/subindex.html
+++ b/subindex.html
@@ -147,10 +147,10 @@
 					<form name="portfolio-contact" method="POST" data-netlify="true"><input type="hidden" name="portfolio-contact" value="portfolio-contact"></form>
 						<div class="row gtr-uniform gtr-50">
 							<div class="col-6 col-12-xsmall">
-								<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name">
+								<input type="text" name="name" id="name" value="" placeholder="Name">
 							</div>
 							<div class="col-6 col-12-xsmall">
-								<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email">
+								<input type="email" name="email" id="email" value="" placeholder="Email">
 							</div>
 							<div class="col-12">
 								<textarea name="message" id="message" placeholder="Type in your message here." rows="6"></textarea>
