--- a/subindex.html
+++ b/subindex.html
@@ -140,7 +140,7 @@
 						<h2>Let's connect!</h2>
 					</header>
 					<p>I am currently accepting new freelance clients and interesting project opportunities.</p>
-					<p>Email me at: <strong>eruotorese@yahoo.com</strong><br>
+					<p>Email me at: <a href="mailto:m.eruotorese@yahoo.com"><strong>Eseoghene Eguakhide</strong></a><br>
 					Or send me a quick message here:</p>
 				</div>
 				<section>
