--- a/subindex.html
+++ b/subindex.html
@@ -144,7 +144,7 @@
 					Or send me a quick message here:</p>
 				</div>
 				<section>
-					<form name="portfolio-contact" method="POST" data-netlify="true"><input type="hidden" name="form-name" value="portfolio-contact"></form>
+					<form name="portfolio-contact" method="POST" data-netlify="true"><input type="hidden" name="form-name" value="portfolio-contact">
 						<div class="row gtr-uniform gtr-50">
 							<div class="col-6 col-12-xsmall">
 								<input type="text" name="name" id="name" value="" placeholder="Name">
