--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="description" content="Portfolio">
     	<meta name="keywords" content="portfolio,Airsay,tech,stem,womenintech">
+		<link rel="icon" type="image/png" href="logo3.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -36,10 +37,7 @@
 							<header class="major">
 								<h2>Is your web presence ticking all the boxes?!</h2>
 							</header>
-							<p>If someone needs what you provide, will your website draw them in? What will they see if they are on their phone? A responsive & accessible web presence is no longer merely a 'bonus' or 'nice to have' - it is essential.
-
-								It is my privilege to offer a chance to be seen on the web to small businesses and individuals around me. Whether that be creating a website for you from the ground up, or updating an existing presence for the mobile age. Providing a place for
-								 interested parties to find and learn about what you offer is what I offer. How can I help you today?</p>
+							<p>Are you worried that your website isn't attracting the right customers? In today's mobile-first world, a responsive and accessible web presence isn't just a nice-to-have - it's essential. That's where I come in. As a web developer, I'm passionate about helping small businesses and individuals like you create an online home that showcases your unique value proposition. Whether you need a brand new website or a mobile-friendly update, I'm here to provide the expertise and support you need to succeed. So why wait? Let's get started today and make sure your business is visible to everyone who needs what you have to offer.</p>
 						</div>
 						<!--<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
@@ -66,11 +64,11 @@
 							<header class="major">
 								<h2>My Services</h2>
 							</header>
-							<p>I dedicate myself to presenting my clients with completed projects that not only meet, but exceed, their initial vision. Knowing what to expect when we work together is critical - here is how I deliver success:</p>
+							<p>I am deeply committed to delivering outstanding results to my clients, and I make it my top priority to surpass their expectations.</p>
 							<ol>
-								<li><strong>Consultation -</strong>  It all begins with a conversation where we'll pinpoint what this project is all about.</li>
+								<li><strong>Effective Communication -</strong> Throughout the project lifecycle, I maintain an open line of communication with my clients, providing regular updates and progress reports. This way, you can rest assured that your project is on track and any potential issues are addressed in a timely manner.</li>
 								<li><strong>Proposal -</strong> A detailed project proposal including a visual preview will be presented and a plan of action will be decided.</li>
-								<li><strong>Creation -</strong> Clients receive regular updates regarding their project status while I create and test it.</li>
+								<li><strong>Creation -</strong> When it comes to delivering successful outcomes, my attention to detail is unparalleled. I pride myself on my ability to anticipate challenges and proactively seek solutions to ensure that the project is completed efficiently and effectively.</li>
 								<li><strong>Launch & Support -</strong> Peace of mind is delivered with the final project in the form of available ongoing support.</li>
 							</ol>
 							
@@ -90,25 +88,25 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/artist portfolio.png" alt="" /></span>
 							<h3>Artist Portfolio</h3>
-							<p>A fully responsive, beautiful, and modern website for a contempoary artist.</p>
+							<p>Created a stunning website that is fully responsive and modern to showcase the collections of the artwork by a contemporary artist, Tega Stevens.</p><br>
 							<ul class="actions special">
-								<li><a href="https://airsay.wixsite.com/tegasteven/" target="_blank" class="button">View</a></li>
+								<li><a href="https://airsay.wixsite.com/tegasteven/" target="_blank" class="button">View live site</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/miya.png" alt="" /></span>
 							<h3>Beauty Salon Website</h3>
-							<p>Fully Responsive website for a Salon/Beauty parlour.</p>
+							<p>Developed a fully responsive website for a salon or beauty parlour, ensuring that it delivers an exceptional user experience across all devices and platforms.</p>
 							<ul class="actions special">
-								<li><a href="https://miyabeautysalon.netlify.app/" target="_blank" class="button">View</a></li>
+								<li><a href="https://miyabeautysalon.netlify.app/" target="_blank" class="button">View live site</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<!--<h3>Stevens Art Gallery</h3>
-							<p>An online showcase of a collection of paintings by artist Steve Villanueva.</p>-->
+							<span class="image fit"><img src="images/banner.png" alt="" /></span>
+							<h3>A Restaurant Demo</h3>
+							<p>A demo restaurant static website project built with HTML and CSS, designed by Muthan Ray.</p><br>
 							<ul class="actions special">
-								<li><a href="#" class="button">View</a></li>
+								<li><a href="https://restaurant-website-by-airsay.netlify.app/" target="_blank" class="button">View live demo</a></li>
 							</ul>
 						</div>
 					</div>
@@ -144,7 +142,7 @@
 							<header class="major">
 								<h2>I'm a Software Engineer</h2>
 							</header>
-							<p>Solving problems and providing elegant, innovative and accessible solutions is a passion of mine.</p>
+							<p>My passion is to solve problems and offer sophisticated, inventive, and user-friendly solutions.</p>
 							<p>Fun facts about me: I am enthusiastic about puzzles. </p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
