--- a/subindex.html
+++ b/subindex.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="description" content="Portfolio">
     	<meta name="keywords" content="portfolio,software-engineer, women-in-tech">
+		<link rel="icon" type="image/png" href="logo3.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -35,22 +36,15 @@
 							<header class="major">
 								<h2>What drives me to create with code?</h2>
 							</header>
-							<p>Building and enhancing software to make everyone days better is what I do. 
-								Passion for learning, problem solving and improvement has always been part of me. 
-								In university, I studied Entrepreneurship and Business management, which enabled me to better better
-								at problem solving, user satisfaction and efficiency 
-								 and software engineering gives me a little of both worlds by satisfying user needs 
-								 via web application. <br><br> While working across diverse industries 
-								 I was struck by how even small improvements in systems and processes universally
-								  made radical impacts on user happiness and satisfaction.
-
-								Between work and pursuing my own outside interests, I have seen just how much the
-								 right technology can help people every day. Now I devote my time to building 
-								 those products and improving the world a little bit at a time.</p>
+							<p>As a software developer, I have a strong passion for creating meaningful and impactful solutions that make people's lives better. I firmly believe that technology can be a powerful tool for positive change, and I strive to use my skills to enhance user satisfaction, streamline processes, and increase efficiency.
+								I am incredibly passionate about using my skills to make a positive impact, and I am committed to continuously learning and improving.
+								<hr>
+								Throughout my career, I have had the opportunity to work across diverse industries, and I have witnessed firsthand how small improvements in systems and processes can have a radical impact on user happiness and satisfaction. This has only reinforced my belief that technology has the power to make a meaningful difference in people's lives.
+								</p>
 						</div>
-						<!--<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-						</div>-->
+						<div class="col-6 col-12-medium imp-medium">
+							<span class="image fits"><img src="images/computer-system-coding-gif.gif" alt="" /></span>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -75,7 +69,7 @@
 							</header>
 							<p>I enjoy keeping up with current and upcoming industry tools, frameworks and trends. I'm most comfortable with the MERN JavaScript stack but always happy to add a new tool to my belt!</p>
 							<ol>
-								<li><strong>Frontend -</strong> React, HTML5/CSS, JavaScript, Bootstrap, Tailwind,WordPress </li><br>
+								<li><strong>Frontend -</strong> React, HTML5/CSS, JavaScript, Bootstrap, Tailwind, WordPress </li><br>
 								<li><strong>Backend -</strong> Node.js, Express, MongoDB, Mongoose </li>
 							
 							</ol>
@@ -98,7 +92,7 @@
 							<h3>Whats In The Fridge!</h3>
 							<p>A fully responsive FullStack Web Application that allows users to fill in ingredients in their Fridge/Kitchen and it returns a list of Recipes filtered by Calories,Missing ingredient,Protein and Carbs.</p>
 							<ul class="actions special">
-								<li><a href="https://whatisinthefridge.netlify.app/" class="button">View</a></li>
+								<li><a href="https://whatisinthefridge.netlify.app/" class="button">View live project</a></li>
 							</ul>
 						</div>
 						
@@ -123,7 +117,8 @@
 							<header class="major">
 								<h2>I'm a Software Engineer.</h2>
 							</header>
-							<p>Creative, detail-oriented software engineer with a deep interest in AI and Innovations. Proven track record of creating and implementing successful front and back end web applications. <br>  <br> When I'm not coding, I can be found browsing about the latest makeup trends, food recipes and cooking new dishes. I'm a cook on diet(wink!). </p>
+							<p>As a creative and detail-oriented software engineer with a passion for AI and innovation, I have a proven track record of creating and implementing successful front and back end web applications. I pride myself on staying up-to-date with the latest industry developments. <br>
+								When I'm not coding, you'll find me browsing the latest makeup trends, experimenting with food recipes, and cooking up a storm </p>
 							<p>I push code frequently, feel free to connect with me on <a href="https://github.com/AirSayy"><strong> GitHub.</strong></a></p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
